# hr-streamlit-project

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  data  docker-compose.yml  pyproject.toml  requirements.txt  session_utils.py
.streamlit/: config.toml
data/: hr_employee_data.csv
models/: classification_report.json  confusion_matrix.json  department_encoder.pkl  fairness_report.json  feature_columns.json  feature_importance.csv  feature_importance_lightgbm.csv  feature_importance_random_forest.csv  feature_importance_xgboost.csv  label_encoder_department.pkl  lightgbm_model.pkl  logistic_regression_model.pkl  lr_attrition_model.pkl  lr_attrition_model_calibrated.pkl  mitigation_comparison.json  model_artifacts.pkl  model_comparison.csv  model_results.json  optimal_threshold.json  random_forest_model.pkl  rf_attrition_model.pkl  salary_encoder.pkl  scaler.pkl  shap_base_value.json  shap_feature_importance.csv  shap_sample_indices.npy  shap_summary.json  shap_values.npy  shap_values_sample.npy  threshold_optimizer_lgbm_salary.pkl  threshold_optimizer_xgb_salary.pkl  xgboost_model.pkl
notebooks/: 01_exploratory_data_analysis.ipynb  02_model_training.ipynb  03_model_explainability.ipynb  04_advanced_models.ipynb  05_fairness_mitigation.ipynb
pages/: 1_Attrition_Analysis.py  2_Department_Analysis.py  3_Predictions.py  4_Fairness_Monitoring.py  Overview.py
scripts/: detect_drift.py  explain_with_shap.py  explore_data.py  generate_explainer.py  train_advanced_models.py  train_model.py  transform_data.py
tests/: conftest.py  test_model.py  (+2 more)
(+14 files in other folders)
